feat: Add slash commands

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Discord js-bot with good practices, docker, and others.",
     "main": "./src/index.js",
     "scripts": {
-        "start": "node ./src/index.js"
+        "start": "node ./src/deploy-commands.js && node ./src/index.js"
     },
     "dependencies": {
         "discord.js": "14.11.0",
